--- a/index.html
+++ b/index.html
@@ -3,10 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Effective Solutions
-    for Your Business</title>
+    <title>Effective Solutions for Your Business</title>
 </head>
 <body>
-    
+    <Header>
+        <nav>
+<a href="">WEB</a>STUDIO
+<ul>
+    <Li><a href="">Studio</a></Li>
+    <Li><a href="">Portfolio</a></Li>
+    <Li><a href="">Contacts</a></Li>     
+</ul>
+</nav>
+<ul>
+    <li>
+        <a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com
+        </a>
+    </li>
+    <li>
+        <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11
+        </a>
+    </li>
+</ul>
+    </Header>
+    <main>
+        <section>
+            <h1>Effective Solutions
+            for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
+            <h2 hidden>Fiatures</h2>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business
+                problem to walk away with the perfect and creative solution.
+            </p>
+            <h3>Punctuality</h3>
+            <p>
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
+            </p>
+            <h3>Diligence</h3>
+            <p>
+                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+            </p>
+                    </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/team-img.png" alt="Product Designer" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team-img2.png" alt="Frontend Developer" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team-img3.png" alt="Marketing" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team-img4.png" alt="UI Designer" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <h2><a href="">WEB</a>STUDIO</h2>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+     </footer>
 </body>
 </html>
