--- a/index.html
+++ b/index.html
@@ -34,39 +34,53 @@
         </section>
         <section>
             <h2 hidden>Fiatures</h2>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business
-                problem to walk away with the perfect and creative solution.
-            </p>
-            <h3>Punctuality</h3>
-            <p>
-                Bring the key message to the brand's audience for the best price within the shortest possible time.
-            </p>
-            <h3>Diligence</h3>
-            <p>
-                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-            </p>
-                    </section>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.
+                </p>
+                 </li>
+                 <li>
+                    <h3>Punctuality</h3>
+                    <p>
+                        Bring the key message to the brand's audience for the best price within the shortest possible time.
+                    </p>
+                 </li>
+                 <li>
+                    <h3>Diligence</h3>
+                    <p>
+                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                    </p>
+                 </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
+         </section>
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/team-img.png" alt="Product Designer" width="264" height="260">
+                    <img src="./images/team-img1.jpg" alt="Product Designer" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team-img2.png" alt="Frontend Developer" width="264" height="260">
+                    <img src="./images/team-img2.jpg" alt="Frontend Developer" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team-img3.png" alt="Marketing" width="264" height="260">
+                    <img src="./images/team-img3.jpg" alt="Marketing" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team-img4.png" alt="UI Designer" width="264" height="260">
+                    <img src="./images/team-img4.jpg" alt="UI Designer" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -74,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <h2><a href="">WEB</a>STUDIO</h2>
+        <h2><a href="./index.html">WEBSTUDIO</a></h2>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
