--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
     <Header>
         <nav>
-<a href="">WEB</a>STUDIO
+<a href="./index.html">WEBSTUDIO</a>
 <ul>
     <Li><a href="">Studio</a></Li>
     <Li><a href="">Portfolio</a></Li>
     <Li><a href="">Contacts</a></Li>     
 </ul>
 </nav>
+<address>
 <ul>
     <li>
         <a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com
@@ -24,7 +25,8 @@
         <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11
         </a>
     </li>
-</ul>
+</ul>       
+    </address>
     </Header>
     <main>
         <section>
@@ -88,7 +90,7 @@
         </section>
     </main>
     <footer>
-        <h2><a href="./index.html">WEBSTUDIO</a></h2>
+        <h2><a href="./index.html">WebStudio</a></h2>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
