--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
 <body>
     <Header>
         <nav>
-<a href="./index.html">WEBSTUDIO</a>
-<ul>
-    <Li><a href="">Studio</a></Li>
-    <Li><a href="">Portfolio</a></Li>
-    <Li><a href="">Contacts</a></Li>     
-</ul>
-</nav>
-<address>
-<ul>
-    <li>
-        <a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com
-        </a>
-    </li>
-    <li>
-        <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11
-        </a>
-    </li>
-</ul>       
-    </address>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <Li><a href="">Studio</a></Li>
+                <Li><a href="">Portfolio</a></Li>
+                <Li><a href="">Contacts</a></Li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </Header>
     <main>
         <section>
@@ -90,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <h2><a href="./index.html">WebStudio</a></h2>
+        <h2><a href="./index.html" id="logo">WebStudio</a></h2>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
