--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <h2><a href="./index.html" id="logo">WebStudio</a></h2>
+        <a href="./index.html" id="logo">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
